# forgeai

./: .env.example  .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SOLOENT.md  STRUCTURE.md  package-lock.json  package.json  pyproject.toml  pytest.ini
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: AFTER_WRITE_WORKFLOW.md  COMMAND_NAMING_CONVENTION.md  CONFIG_GUIDE.md  MIGRATION_GUIDE.md  MULTI_AGENT_REVIEW.md  NOVEL_CREATION_WORKFLOW.md  STAGE_PARAMS_EXAMPLE.md  SYSTEM_WORKFLOW_MINDMAP.md  TOKEN_MANAGEMENT.md  WRITE_COMMAND.md
docs/01-快速开始/: 5分钟上手.md  README.md  常见问题.md
docs/02-创作流程/: 写前准备.md  写后处理.md  完整创作流程.md  最佳实践.md  章节创作.md
docs/03-命令参考/: 核心命令.md
docs/04-Agent详解/: Agent概览.md  OOC检测.md  上下文管理.md  数据管理.md  时间线管理.md  节奏检查.md  设定一致性检查.md  连贯性检查.md  追读力检查.md  高潮点检查.md
docs/05-API文档/: CLI命令.md  Python API.md  数据结构.md  配置文件.md
docs/06-故障排查/: 常见错误.md  性能优化.md  最佳实践.md
projects/新测试项目/: SOLOENT.md
projects/样板书库/: README.md  江左伪郎(历史系之狼).txt
projects/流程测试/: SOLOENT.md  integration_test.py
projects/测试完整流程/: .gitignore  SOLOENT.md
projects/测试小说/: SOLOENT.md  prompt_1.txt
projects/测试小说2/: SOLOENT.md  prompt_20.txt
scripts/: pre-release-check.py
src/: extension.ts
system/agents/: consistency-checker.md  context-agent.md  continuity-checker.md  data-agent.md  high-point-checker.md  ooc-checker.md  pacing-checker.md  reader-pull-checker.md  timeline-agent.md
system/checkers/: consistency-checker.md  continuity-checker.md  high-point-checker.md  ooc-checker.md  pacing-checker.md  reader-pull-checker.md
system/constitution/: MASTER.md  (+1 more)
tests/: TEST_COVERAGE_REPORT.md  conftest.py  count_words.py  test_auto_fixer.py  test_batch_generator.py  test_book_analyzer.py  test_cache_manager.py  test_cli_entity_relationship.py  test_cli_formatter.py  test_cloud_llm_client.py  test_config.py  test_config_validator.py  test_connection.py  test_consistency_checker.py  test_context_extractor.py  test_entity_extractor_v3_ner.py  test_env_loader.py  test_error_handler.py  test_exceptions.py  test_growth_analyzer.py  test_help_system.py  test_humanize_scorer.py  test_independent_reviewer.py  test_index_manager.py  test_init_project.py  test_llm_entity_extractor.py  test_logger.py  test_parallel_generator.py  test_pipeline.py  test_progress_display.py  test_qwen_reranker.py  test_rag_adapter.py  test_relationship_visualizer.py  test_retry_handler.py  test_review_aggregator.py  test_security.py  test_state_change_confirmer.py  test_state_manager.py  test_strand_tracker.py  test_timeline_manager.py  (+2 more)
(+141 files in other folders)
